Project

General

Profile

Actions

Bug #14589

closed

bucket check --check-objects has not return

Added by weijun duan about 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

radosgw-admin bucket check --bucket=bkt-keyuser --fix --check-objects

Actions #1

Updated by Gaurav Garg almost 8 years ago

Hi weijun,

In which particular case its not returning. You have provided very less information in this bug description. Could you please provide steps to reproduce this bug.

Actions #2

Updated by Gaurav Garg almost 8 years ago

Assignee: Gaurav Garg

Actions #3

Updated by Yehuda Sadeh over 7 years ago

Issue was probably found by code inspection, and didn't really have any impact (other than that when running a specific radosgw-admin command it wouldn't dump the list of objects in a bucket). New fix proposed:
https://github.com/ceph/ceph/pull/11324

Actions #4

Updated by Nathan Cutler over 7 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Yehuda Sadeh
Actions #5

Updated by Orit Wasserman over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF