rgw: dump objects in RGWBucket::check_object_index()

Fixes: http://tracker.ceph.com/issues/14589

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>